Updating pipeline: netflix_project1 Updating dataset: DelimitedText1

--- a/pipeline/netflix_project1.json
+++ b/pipeline/netflix_project1.json
@@ -5,9 +5,14 @@
 			{
 				"name": "ForEachgitfolder",
 				"type": "ForEach",
-				"state": "Inactive",
-				"onInactiveMarkAs": "Succeeded",
-				"dependsOn": [],
+				"dependsOn": [
+					{
+						"activity": "Validation1",
+						"dependencyConditions": [
+							"Succeeded"
+						]
+					}
+				],
 				"userProperties": [],
 				"typeProperties": {
 					"items": {
@@ -103,6 +108,23 @@
 					},
 					"timeout": "0.12:00:00",
 					"sleep": 1
+				}
+			},
+			{
+				"name": "Fail1",
+				"type": "Fail",
+				"dependsOn": [
+					{
+						"activity": "Validation1",
+						"dependencyConditions": [
+							"Failed"
+						]
+					}
+				],
+				"userProperties": [],
+				"typeProperties": {
+					"message": "filenotfound",
+					"errorCode": "404"
 				}
 			}
 		],
